modules within a single plugin can't be addressed individually

Many plugins contain multiple modules (see the usage of add_module()). Sometimes they have a shortcut (or more) so they can be addressed from the command line. But there is no API to differentiate different modules in the same plugin.

This is a problem in particular in VLC 3.0 where some plugin contain a lot of different modules because they need to share the same DLL to retain/share the hardware decoding instance. This leads to problems like https://forum.videolan.org/viewtopic.php?f=14&t=164879 where the AMD Enhancer can't be enabled from the UI (on 4.0 it's in a separate plugin).