qt: hardcode the name of the shortcut for the AMD VQ Enhancer

Otherwise the name is the same of the DLL which doesn't correspond to
the shortcut we need to use.

Fixes #28691